# eso

./: .editorconfig  .gitignore  Cargo.toml  README.md
.github/workflows/: cargo-audit.yml  ci-build.yml
examples/: ref_own_newtypes.rs  simple_newtype.rs
src/: borrow.rs  eso.rs  lib.rs  maybe.rs  shorthand.rs  unify.rs
src/eso/: create.rs  inside.rs  manipulate.rs  prove.rs  query.rs  req.rs  transform.rs
tests/: ref_own_newtypes.rs  simple_newtype.rs
xtask/: Cargo.toml
xtask/src/: main.rs  utils.rs
