[package]
name = "xtask"
version = "0.1.0"
authors = ["Sebastien Braun <sebastien@sebbraun.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
argh = "0.1.4"
color-eyre = "0.5.11"
colored = "2.0.0"
eyre = "0.6.5"
lazy_static = "1.4.0"
tap = "1.0.1"
xshell = "0.1.12"
